<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.WelcomeActivity">
<ImageView
    android:foreground="@drawable/foreground_design"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:src="@drawable/nutrition_logo"
    android:scaleType="centerCrop"
    android:id="@+id/background_image"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/my_nutrision_pal"
        android:textColor="@color/white"
        android:fontFamily="@font/myfont"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/background_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".4"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:shadowColor="@android:color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:id="@+id/main_title"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explore_new_recipes"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#fbfbfb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/main_title"
        android:id="@+id/sub_title"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:id="@+id/register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/light_purple"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".7"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="#fbfbfb"
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/sign_in_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_button"
        android:textAlignment="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>