<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.RegistrationActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/nutrition_logo"
        android:scaleType="centerCrop"
        android:foreground="@drawable/foreground_design"
        android:id="@+id/background_image_registration"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registration_title"
        android:text="@string/my_nutrision_pal"
        android:textColor="@color/white"
        android:textSize="33sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/myfont"
        app:layout_constraintEnd_toEndOf="@id/background_image_registration"
        app:layout_constraintVertical_bias=".2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="#fbfbfb"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_title"
        android:layout_marginTop="@dimen/_30sdp"
        android:textAlignment="center"
        android:id="@+id/login_text"
        android:fontFamily="@font/myfont"/>
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text"
        app:layout_constraintWidth_percent=".8"
        android:drawableLeft="@drawable/ic_email"
        android:backgroundTint="#cccccc"
        android:textColor="@color/white"
        android:id="@+id/email_adress_edit_text"/>

    <EditText
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_adress_edit_text"
        app:layout_constraintWidth_percent=".8"
        android:drawableLeft="@drawable/ic_password"
        android:backgroundTint="#cccccc"
        android:inputType="textPassword"
        android:id="@+id/password_edit_text"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_button_login_fragment"
        android:backgroundTint="@color/light_purple"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:padding="14dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias="0.7"/>
</androidx.constraintlayout.widget.ConstraintLayout>